examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx
fn main() -> Unit {
    let (a, b) = 1
}
